<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activities.CoursesActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fabLayoutMargin"
        app:borderWidth="0dp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:focusable="true"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_add_white" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCourseListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</RelativeLayout>