<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/itemLectureCardMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvItemCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/itemCourseStartMargin"
            android:layout_marginTop="@dimen/itemCourseStartMargin"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/itemCourseNameTextSize" />

        <TextView
            android:id="@+id/tvItemDateOfExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/itemCourseStartMargin"
            android:layout_marginBottom="@dimen/itemCourseStartMargin"
            android:textSize="@dimen/itemHolderOfCourseTextSize" />
    </LinearLayout>


</androidx.cardview.widget.CardView>