...
    <string name="enterCodeOfCourseText">Unesite šifru kolegija</string>
    <string name="enterCodeOfCourseHint">Npr. SR605-19</string>
    <string name="enterHolderOfCourseText">Unesite ime nositelja</string>
    <string name="enterHolderOfCourseHint">Npr. Ivan Ivić</string>
    <string name="enterLectureHoursText">Broj sati predavanja</string>
    <string name="enterLecturesHoursHint">Npr. 45</string>
    <string name="btnAddNewCourseText">DODAJ KOLEGIJ</string>
    <string name="enterExercisesHoursText">Broj sati laboratorijskih vježbi</string>
    <string name="enterExercisesHoursHint">Npr. 30</string>
    <string name="enterAuditoryHoursText">Broj sati auditornih vježbi</string>
    <string name="enterAuditoryHoursHint">Npr. 15</string>
    <string name="enterDesignHoursText">Broj sati konstrukcijskih vježbi</string>
    <string name="enterDesignHoursHint">Npr. 30</string>
...
